--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,29 +8,24 @@
 		<version>3.1.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.noko</groupId>
-	<artifactId>guessthechar</artifactId>
+	<groupId>com.nok</groupId>
+	<artifactId>gtc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>guessthechar</name>
-	<description>API for guessthechar web app</description>
+	<name>gtc</name>
+	<description>Server implementation for guessthechar web app</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
