--- a/server/.gitignore
+++ b/server/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 ### ENV VARS ###
-src/main/resources/application.properties
+application.properties
 
 ### STS ###
 .apt_generated
